fixed color contrast issue

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -84,14 +84,13 @@ h1 {
     text-align: center;
     opacity: 0.7;
     background-color: var(--accent2-color);
-    color: #fff;
+    color: var(--dark-color);
 }
 .hero article {
     position: absolute;
     width: auto;
     height: 100px;
     background-color: var(--accent1-color);
-    color: #fff;
     opacity: 0.7;
     bottom: 10px;
     left: 15px;
@@ -102,6 +101,7 @@ h1 {
     font-size: 0.8rem;
     line-height: 1;
     margin: 1px;
+    color: white;
 }
 .hero article img {
     float: right;
